# Syntralinepp-Compiler

./: .gitignore  .syntra-config.yaml  CITATION.cff  CMakeLists.txt  LICENSE  README.md  make_mnist_csv.py  pyproject.toml  requirements-runtime.txt
cmake/: LLVMConfig.cmake  SyntraMacros.cmake
docs/tex/: syntralinepp_diagram.tex
examples/: cnn_pipeline.syntra  distributed.syntra  evalsuite.syntra  hypergrid_search.syntra  mnist_basic.syntra  versioning.syntra
include/syntra/: ast.hpp  backend_jax.hpp  backend_pytorch.hpp  backend_runtime.hpp  diagnostics.hpp  ir.hpp  ir_execution.hpp  ir_json.hpp  ir_pipeline.hpp  lexer.hpp  optimizer.hpp  parser.hpp  pass_manager.hpp  sema.hpp  symbol_table.hpp  syntra_config.hpp  token.hpp  types.hpp
runtime/: CMakeLists.txt  __init__.py
runtime/jax/: __init__.py  syntra_jax_runtime.py
runtime/python/: __init__.py  syntra_common.py
runtime/pytorch/: __init__.py  syntra_pytorch_runtime.py
runtime/syntra_vm/: __init__.py  stub_vm.py
scripts/: build.sh  format.sh  generate_docs.sh  run_examples.sh  test.sh  test_integration.sh  test_runtime.sh
src/: CMakeLists.txt  main.cpp
src/ast/: ast.cpp
src/backend/: backend_jax.cpp  backend_pytorch.cpp
src/config/: syntra_config.cpp
src/diag/: diagnostics.cpp
src/ir/: ir_execution.cpp  ir_json.cpp  ir_pipeline.cpp
src/lexer/: lexer.cpp
src/optimizer/: optimizer.cpp
src/parser/: parser.cpp
src/pass_manager/: pass_manager.cpp
src/runtime/: backend_runtime.cpp
src/sema/: sema.cpp
tests/: CMakeLists.txt
tests/integration/: test_cli_integration.py
tests/python/: test_jax_runtime.py  test_pytorch_runtime.py
tests/testdata/: no_experiment.syntra  syntax_error.syntra
tests/unit/: test_core.cpp
